Ingress/tukano-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tukano-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tukano.com
    - http:
        paths:
          - path: ~* ^/(users|shorts)/
            pathType: ImplementationSpecific
            backend:
              service:
                name: tukano-service
                port:
                  number: 8080
          - path: /blobs/
            pathType: Prefix
            backend:
              service:
                name: tukano-blob-service
                port:
                  number: 8080
